main.css
/* ... */
/* Font Awesome icons (subset) */
@font-face {
  font-family: 'fa';
  src: url('fonts/Font-Awesome/fa.eot');
  src: url('fonts/Font-Awesome/fa.eot#iefix') format('embedded-opentype'),
       url('fonts/Font-Awesome/fa.woff') format('woff'),
       url('fonts/Font-Awesome/fa.ttf') format('truetype'),
       url('fonts/Font-Awesome/fa.svg#fa') format('svg');
  font-weight: normal;
  font-style: normal;
}
/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'fa';
    src: url('fonts/Font-Awesome/fa.svg?98374205#fa') format('svg');
  }
}
*/


/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */
h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 2rem;
  font-weight: 400; }
h1.logo {
  display: inline-block;
  font-family: "Cardo", times, serif;
/*  color: #d3d7cf/*#CCCCCC*/;
  padding-top: 3rem;
  margin-bottom: 3rem; }
h1.serif,
h2.serif,
h3.serif,
h4.serif,
h5.serif,
h6.serif {
  font-family: "Crimson Text", times, serif;
/*  color: #d3d7cf;/*#B8B8B8*/;
  margin-top: 5rem; }
h1.short,
h2.short,
h3.short,
h4.short,
h5.short,
h6.short {
  margin-top: 2rem; }
h1.sans-serif,
h2.sans-serif,
h3.sans-serif,
h4.sans-serif,
h5.sans-serif,
h6.sans-serif {
  font-family: "Source Sans Pro", arial, sans-serif; }
h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem; }
h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }

/* Larger than phablet */
@media (min-width: 550px) {
  h1 { font-size: 5.0rem; }
  h2 { font-size: 4.2rem; }
  h3 { font-size: 3.6rem; }
  h4 { font-size: 3.0rem; }
  h5 { font-size: 2.4rem; }
  h6 { font-size: 1.5rem; }
}

p {
  margin-top: 0; }


/* Links
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a {
  color: #5B3C03;/*#F9CC71; /* Original */
/*  color: rgb(225,225,153); */
  text-decoration: none; }
a:hover, a:active {
  color: #2e1e02/*#FCE6B8*/;
  text-decoration: underline; }
a.plain {
  color: inherit;
  text-decoration: none; }


/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
  display: inline-block;
  height: 38px;
  padding: 0 30px;
  color: #CCC;
  text-align: center;
  font-size: 11px;
  font-weight: 600;
  line-height: 38px;
  letter-spacing: .1rem;
  text-transform: uppercase;
  text-decoration: none;
  white-space: nowrap;
  background-color: transparent;
  border-radius: 4px;
  border: 1px solid #bbb;
  cursor: pointer;
  box-sizing: border-box; }
.button:hover,
button:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
.button:focus,
button:focus,
input[type="submit"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
  color: #FFF;
  border-color: #888;
  outline: 0; }
.button.button-primary,
button.button-primary,
input[type="submit"].button-primary,
input[type="reset"].button-primary,
input[type="button"].button-primary {
  color: #666;
  background-color: #F9CC71;
  border-color: #F9CC71; }
.button.button-primary:hover,
button.button-primary:hover,
input[type="submit"].button-primary:hover,
input[type="reset"].button-primary:hover,
input[type="button"].button-primary:hover,
.button.button-primary:focus,
button.button-primary:focus,
input[type="submit"].button-primary:focus,
input[type="reset"].button-primary:focus,
input[type="button"].button-primary:focus {
  color: #666;
  background-color: #F9CC71;
  border-color: #F9CC71; }


/* Lists
–––––––––––––––––––––––––––––––––––––––––––––––––– */
ul {
  list-style: circle inside; }
ul.plain {
  list-style-type: none; }
ol {
  list-style: decimal inside; }
ol, ul {
  padding-left: 0;
  margin-top: 0; }
ul ul,
ul ol,
ol ol,
ol ul {
  margin: 1.5rem 0 1.5rem 3rem;
  font-size: 90%; }
li {
  margin-bottom: 1rem; }


/* Code
–––––––––––––––––––––––––––––––––––––––––––––––––– */
code {
  padding: .2rem .5rem;
  margin: 0 .2rem;
  font-size: 90%;
  white-space: nowrap;
  background: #F1F1F1;
  border: 1px solid #E1E1E1;
  border-radius: 4px; }
pre > code {
  display: block;
  padding: 1rem 1.5rem;
  white-space: pre; }

.u-key {
  font-family: monospace;
  font-size: 12px; }


/* Tables
–––––––––––––––––––––––––––––––––––––––––––––––––– */
th,
td {
  padding: 12px 15px;
  text-align: left;
  border-bottom: 1px solid #E1E1E1; }
th:first-child,
td:first-child {
  padding-left: 0; }
th:last-child,
td:last-child {
  padding-right: 0; }


/* Spacing
–––––––––––––––––––––––––––––––––––––––––––––––––– */
button,
.button {
  margin-bottom: 1rem; }
input,
textarea,
select,
fieldset {
  margin-bottom: 1.5rem; }
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
  margin-bottom: 2.5rem; }
nav {
  margin-top: 0;
  margin-bottom: 5rem;
  margin-left: auto;
  margin-right: auto; }
hr {
  margin-top: 3rem;
  margin-bottom: 2.5rem;
  border-width: 0;
  border-top: 1px solid #c4c4c2/*#888a85/*#555753/*#333*/; }


/* Utilities
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.u-full-width {
  width: 100%;
  box-sizing: border-box; }
.u-max-full-width {
  max-width: 100%;
  box-sizing: border-box; }
.u-pull-right {
  float: right; }
.u-pull-left {
  float: left; }
/* ... */

